--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <img src="https://i.ibb.co/8LMCd4bx/Design-sans-titre.png" alt="Photo de profil" class="photo">
             <div>
                 <div class="section">
-           <center><h2>Recherche d'une alternance en tant que développeur Web/Logiciel JUNIOR</h2></center>
+           <center><h2>Recherche d'une alternance en tant que développeur Web/Logiciel</h2></center>
            
             </div>
                 <h1>Alexandre Guiguet</h1>
@@ -204,8 +204,7 @@
                     <p><strong>Email :</strong> alexandre.guiguet151@gmail.com
  </p>
                     <p><strong>Téléphone :</strong> 06 56 82 62 75</p>
-                    <p><strong>Adresse :</strong> 19T Chemin Des Eglentines 69580 Sathonay Village</p>
-                    <p><strong>Âge :</strong> 18 ans</p>
+                    <p><strong>Adresse :</strong> Sathonay Village</p>
                 </div>
                 <div class="contact-icons">
                     <a href="mailto:alexandre.guiguet151@gmail.com" title="Email">
@@ -232,7 +231,11 @@
                 <span class="badge">Esprit d'équipe</span>
                 <span class="badge">Gestion de projet</span>
                 <span class="badge">Adaptabilité</span>
-                <span class="badge">Sang froid</span>
+                <span class="badge">Gestion du stress</span>
+                <span class="badge">Curiosité</span>
+                <span class="badge">Créativité</span>
+                <span class="badge">Autonomie</span>
+
             </div>
         </div>
 
@@ -247,8 +250,6 @@
                 <span class="skill">VsCode</span>
                 <span class="skill">Git / GitHub</span>
                 <span class="skill">Javascript</span>
-                <span class="skill">GPT-4</span>
-                <span class="skill">Grok</span>
                 <span class="skill">Windows</span>
                 <span class="skill">Logitrace</span>
                 <span class="skill">Solidworks</span>
@@ -259,7 +260,7 @@
             <h2>Expérience professionnelle</h2>
             <ul class="timeline">
                 <li>
-                    <strong>Apprenti Chaudronnier</strong> - Allouis face in tec  <span class="badge">2022 - 2025</span><br>
+                    <strong>Apprenti Chaudronnier - Allouis face in tec </strong> <span class="badge">2022 - 2025</span><br>
                     <ul>
                         <br>
                         <li>Préparer et installer les machines-outils après analyse du dossier technique ou du plan.</li>
@@ -306,7 +307,7 @@
             <h2>Centres d'intérêt</h2>
             <ul>
                 <li>Programmation</li>
-                <li>Veille technologique & IA</li>
+                <li>Veille technologique</li>
                 <li>Voyages & cultures</li>
                 <li>Mécanique</li>
                 <li>Photographie</li>
