--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <img src="https://i.ibb.co/8LMCd4bx/Design-sans-titre.png" alt="Photo de profil" class="photo">
             <div>
                 <div class="section">
-           <center><h2>Recherche d'une alternance en tant que développeur Web/Logiciel</h2></center>
+           <center><h2>Rech::erche d'une alternance en tant que développeur Web/Logiciel</h2></center>
            
             </div>
                 <h1>Alexandre Guiguet</h1>
