--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             <h2>Langues</h2>
             <ul>
                 <li>Français (natif)</li>
-                <li>Anglais (scolaire)</li>
+                <li>Anglais (A2)</li>
             </ul>
         </div>
 
